[package]
name = "bignate"
version = "0.1.0"
authors = ["Emma Lo <emma@iscute.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.34"
regex = "1.4.2"
lazy_static = "1.4.0"
